--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "redux-simple-starter",
+  "name": "recipe box",
   "version": "1.0.0",
-  "description": "Simple starter package for Redux with React and Babel support",
+  "description": "React based recipe box",
   "main": "index.js",
-  "repository": "git@github.com:StephenGrider/ReduxSimpleStarter.git",
+  "repository": "https://github.com/joshuahenson/recipeBox.git",
   "scripts": {
     "start": "node ./node_modules/webpack-dev-server/bin/webpack-dev-server.js",
     "test": "webpack-dev-server  --host $IP --port $PORT"
-
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +25,7 @@
     "react-bootstrap": "^0.28.3",
     "react-dom": "^0.14.7",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "redux-localstorage": "^0.4.0"
   }
 }
