--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "recipe box",
+  "name": "recipe_box",
   "version": "1.0.0",
   "description": "React based recipe box",
   "main": "index.js",
